syntax = "proto3";
option csharp_namespace = "GrpcServiceApp.Services";

package greet;
import "google/protobuf/timestamp.proto";
// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse);

  // Server strreaming
  rpc GreetManyTimesServerStreaming(GreetManyTimesRequest) returns (stream GreetManyTimesResponse);



	// Client streaming
	rpc LongGreetClientStreaming (stream LongGreetRequest) returns (LongGreetResponse) {}

	// Bidi streaming
	rpc GreetEveryoneBidirectional (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {}



}

message Greeting{
	string first_name = 1;
	string last_name = 2;
}
// The request message containing the user's name.
message HelloRequest {
  Greeting greeting = 1;
}

// The response message containing the greetings.
message HelloResponse {
  string result = 1;
}




message GreetManyTimesRequest{
	Greeting greeting = 1;
}
// The request message containing the user's name.
message GreetManyTimesResponse {
  string result = 1;
  google.protobuf.Timestamp time = 2;

}



message GreetingRequest {
	Greeting greeting = 1;
}

message GreetingResponse {
	string result = 1;
}

message LongGreetRequest {
	Greeting greeting = 1;
}

message LongGreetResponse {
	string result = 1;
}


// Bidirectional streaming
 message GreetEveryoneRequest {
	Greeting greeting = 1;
}

message GreetEveryoneResponse {
	string result = 1;
}